2005-09-27  Andy Wingo  <wingo@pobox.com>

	* gst/tcp/gsttcpclientsrc.c: Cleaned up.

	* gst/tcp/gsttcpserversrc.c: Cleaned up.

	* gst/tcp/gsttcpclientsrc.c: Updated for new gsttcp API.

	* gst/tcp/gsttcp.h: 
	* gst/tcp/gsttcp.c (gst_tcp_read_buffer): New function, factored
	out of tcpclientsrc.c. Cancellable.
	(gst_tcp_socket_read): Made private, cancellable, with better
	diagnostics. Also the FIONREAD ioctl takes a int*, not a size_t*.
	(gst_tcp_gdp_read_buffer): Made cancellable, actually returns the
	whole buffer, and better diagnostics.
	(gst_tcp_gdp_read_caps): Same.

	* gst/sine/gstsinesrc.c (gst_sinesrc_wait): Add the base time.

2005-09-26  Andy Wingo  <wingo@pobox.com>

	* gst/sine/gstsinesrc.h:
	* gst/sine/gstsinesrc.c: Refactor, remove the table lookup code,
	change the 'sync' property to 'is-live' and implement it halfway,
	update for controller api change.

	* gst/volume/gstvolume.c (volume_transform_ip): Update for
	controller api change.

2005-09-24  Wim Taymans  <wim@fluendo.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_reset):
	* gst-libs/gst/audio/gstaudiosink.c:
	(gst_audioringbuffer_class_init), (audioringbuffer_thread_func),
	(gst_audioringbuffer_stop):
	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_event), (gst_base_audio_sink_render),
	(gst_base_audio_sink_change_state):
	* gst-libs/gst/audio/gstbaseaudiosink.h:
	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_stop),
	(gst_ring_buffer_set_sample), (gst_ring_buffer_clear_all),
	(gst_ring_buffer_commit), (gst_ring_buffer_read):
	* gst-libs/gst/audio/gstringbuffer.h:
	Fix sync again. Moved sample alignment to basesink.

2005-09-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-base-plugins-docs.sgml:
	* docs/plugins/gst-plugins-base-plugins-sections.txt:
	* gst/volume/gstvolume.c:
	  add/fix docs
	* gst-libs/gst/audio/audio.c: (gst_audio_frame_byte_size):
	* gst-libs/gst/audio/audio.h: