@@ -1,3 +1,12 @@
+2005-09-28  Andy Wingo  <wingo@pobox.com>
+
+	* gst/tcp/gsttcpclientsrc.c: Make interruptable -- code stolen
+	from fdsrc. Get caps in create() instead of start() so it can be
+	interrupted. Interruption somewhat untested.
+
+	* gst/tcp/gsttcp.c (gst_tcp_read_buffer, gst_tcp_socket_read):
+	Proper EOS handling.
+
 2005-09-27  Andy Wingo  <wingo@pobox.com>
 
 	* gst/tcp/gsttcpclientsrc.c: Cleaned up.
